# UartInterface

./: CMakeLists.txt  Message.xml  MessageInterface.cpp  MessageInterface.h  UartMessageCallbackManagement.cpp  UartMessageCallbackManagement.h  UartMessageInterface.cpp  UartMessageInterface.h  UartMessageReceiver.cpp  UartMessageReceiver.h  UartMessageSender.cpp  UartMessageSender.h  main.cpp
